--- a/src/app/modules/access/login/login.component.html
+++ b/src/app/modules/access/login/login.component.html
@@ -1,3 +1,4 @@
+<app-spinner-loader [visible]="loading"></app-spinner-loader>
 <div class="surface-ground min-h-screen flex align-items-center justify-content-center">
     <div class="surface-card p-4 shadow-2 border-round w-full lg:w-6 md:w-8">
       <div class="text-center mb-5">
