staff-user-management css styles

--- a/src/app/modules/admin/admin-dashboard/admin-dashboard.component.html
+++ b/src/app/modules/admin/admin-dashboard/admin-dashboard.component.html
@@ -2,7 +2,7 @@
 <app-dynamic-navbar></app-dynamic-navbar>
 
 @if (dashboardData !== undefined) {
-    <div style="display: flex; flex-wrap: wrap; gap: 10px; justify-content: center;">
+    <div style="display: flex; flex-wrap: wrap; gap: 10px; justify-content: center; padding-top: 10%;">
         <!-- Admin Card -->
         <p-card
             routerLink="/admin/dashboard/admin/list"
