--- a/src/app/modules/admin/admin-dashboard/staff-user-list/staff-user-list.component.html
+++ b/src/app/modules/admin/admin-dashboard/staff-user-list/staff-user-list.component.html
@@ -1,6 +1,12 @@
-<form [formGroup]="filterForm" (ngSubmit)="onGetUserList()">
-    <div class="card flex justify-content-center">
-        <p-dropdown
+<app-spinner-loader [visible]="visible"></app-spinner-loader>
+<p-card class="p-shadow-4">
+  <p-toolbar>
+    <div class="p-toolbar-group-left">
+      <form [formGroup]="filterForm" (ngSubmit)="onGetUserList()" class="p-fluid">
+        <div class="p-field">
+          <label for="status">Status</label>
+          <p-dropdown
+            id="status"
             formControlName="status"
             optionLabel="label"
             placeholder="Select Item"
@@ -9,47 +15,61 @@
             [options]="activeChoices"
             [virtualScroll]="true"
             [virtualScrollItemSize]="38"
-            [style]="{ width: '15rem' }"
-        />
+            styleClass="w-full"
+          ></p-dropdown>
+        </div>
+        <button type="submit" class="p-button p-button-danger p-button-lg">Submit</button>
+      </form>
     </div>
-    <button type="submit" class="btn btn-danger btn-lg btn-block">Submit</button>
-</form>
-<button routerLink="/admin/new-user/staff/{{role}}">Add user</button>
-<p-table
-        styleClass='p-datatable-sm p-datatable-striped'
+    <div class="p-toolbar-group-right">
+      <button pButton type="button" routerLink="/admin/new-user/staff/{{ role }}" class="p-button p-button-success p-button-lg">Add User</button>
+    </div>
+  </p-toolbar>
+  <div class="p-grid">
+    <div class="p-col-12">
+      <p-table
+        styleClass="p-datatable-sm p-datatable-striped"
         [value]="users"
         [rows]="10"
         [tableStyle]="{ 'min-width': '50rem' }"
         [paginator]="true"
         [rowsPerPageOptions]="[10, 20, 50]"
->
-    <ng-template pTemplate="header" let-columns>
-        <tr>
+      >
+        <ng-template pTemplate="header" let-columns>
+          <tr>
             <th>Name</th>
             <th>Surname</th>
             <th>Email</th>
             <th>Username</th>
             <th>Actions</th>
-        </tr>
-    </ng-template>
-    <ng-template pTemplate="body" let-user>
-        <tr>
+            <th></th>
+          </tr>
+        </ng-template>
+        <ng-template pTemplate="body" let-user>
+          <tr>
             <td>{{ user.firstName }}</td>
             <td>{{ user.lastName }}</td>
             <td>{{ user.email }}</td>
             <td>{{ user.username }}</td>
             <td>
+              <div class="p-d-flex p-ai-center p-jc-between">
                 <app-toggle-button
-                        [active]="user.active"
-                        [activeLabel]="'Active'"
-                        [notActiveLabel]="'Not active'"
-                        (onChangeEvent)="onEnableDisableUser(user.id, $event)"
+                  [active]="user.active"
+                  [activeLabel]="'Active'"
+                  [notActiveLabel]="'Not active'"
+                  (onChangeEvent)="onEnableDisableUser(user.id, $event)"
                 ></app-toggle-button>
-                <button routerLink="/admin/edit-user/{{user.id}}/staff/{{role}}">Edit user</button>
-                <button routerLink="/admin/change-user-password/{{user.id}}">Change password</button>
+              </div>
             </td>
-        </tr>
-    </ng-template>
-</p-table>
-
-
+            <td>
+              <div class="p-d-flex p-ai-center p-jc-between">
+                <button pButton type="button" routerLink="/admin/edit-user/{{ user.id }}/staff/{{ role }}" class="p-button p-button-info">Edit</button>
+                <button pButton type="button" routerLink="/admin/change-user-password/{{ user.id }}" class="p-button p-button-warning ml-2">Change Password</button>
+              </div>
+            </td>
+          </tr>
+        </ng-template>
+      </p-table>
+    </div>
+  </div>
+</p-card>
